Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1628

[cpp] Stopping container in on_container_start will hang

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.18.0
    • proton-c-0.18.1
    • cpp-binding
    • None

    Description

      class immediate_stop_tester : public proton::messaging_handler {
      public:
          void on_container_start(proton::container &c) PN_CPP_OVERRIDE {
              c.stop();
          }
      };
      
      int test_container_immediate_stop() {
          immediate_stop_tester t;
          proton::container(t).run();  // will hang
          return 0;
      }
      

      Attachments

        Issue Links

          Activity

            People

              aconway Alan Conway
              jdanek Jiri Daněk
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: