PROTON-1628: [cpp] Stopping container in on_container_start will hang

Check if already stopping before entering the event loop in container::impl::thread()